--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./index.js"
+    "start": "node -r dotenv/config ./index.js",
+    "dev": "nodemon -r dotenv/config ./index.js"
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,14 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "monk": "^7.3.1"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.4"
+  },
+  "engines": {
+    "node": "v14.5.0"
   }
 }
