--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fastest-validator": "^1.7.0",
     "monk": "^7.3.1"
   },
   "devDependencies": {
